# MCP-server-agenda

./: .gitignore  Dockerfile  README (1).md  README.md  claude_desktop_config.json  docker-compose.yml  env.txt  postgres.py  pyproject.toml  requirements.txt
csv/: appointment_type.csv  appointments.csv  generate_appointments.py  patients.csv
db init/: init.sql
mcp/server/: fastmcp.py
mcp/server/fastmcp/: server.py
