[project]
name = "mcp-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "faker>=37.3.0",
    "logging>=0.4.9.6",
    "mcp[cli]>=1.9.3",
    "pandas>=2.3.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "typing>=3.10.0.0",
]

[tool.uv.workspace]
members = [
    "mcp-postgres",
]
